Made few changes to footer, updated carousel image

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
 
             <!-- Next and previous buttons -->
-            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+            <a class="prev" onclick="plusSlides(-1)">&#10094;</a> <!--For the previous and next arrow buttons at the side-->
             <a class="next" onclick="plusSlides(1)">&#10095;</a>
 
         <!-- The dots/circles -->
@@ -120,10 +120,11 @@
     </div>
     
     <br>
-    
+    <br>
     <div class="blockquote">
-            Good things come to those who wait... SignUp to begin your journey!
+            <center><b style="color:#26A5A5;">GOOD THINGS COME TO THOSE WHO WAIT..<br>SIGN UP TO BEGIN YOUR JOURNEY! </b></center>
         </div>
+    <br>
 
 <!--<div class="gridDisplay">
     <span class = "cards">
