--- a/about_us.html
+++ b/about_us.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="navbar.css"> <!-- For the navigation bar-->
     <link rel="stylesheet" href="footer/footer.css">
     <link rel="stylesheet" href="button.css">
-    <script src="jquery-3.4.1.min.js"></script>
-
+    <script src="jquery-3.4.1.min.js"></script> <!--Plugin required to implement jquery-->
     <script src="jquery_file.js"></script>
     <style>
         
