Added Animation to the add medals website

--- a/add_medals.html
+++ b/add_medals.html
@@ -6,7 +6,9 @@
       <link rel="stylesheet" href="footer/footer.css">
       <link rel="stylesheet" href="snip.css">
       <link rel = "stylesheet" href = "css/all.css">
-	<link rel = "stylesheet" href = "button.css">   
+      <link rel = "stylesheet" href = "button.css">   
+      <script src="jquery-3.4.1.min.js"></script> <!--Plugin required to implement jquery-->
+      <script src="jquery_anime.js"></script>
 <style type="text/css">
 
 /* Fixed sidenav, full height */
@@ -108,7 +110,7 @@ body {
                 <a href="add_goal.html">Add Goal</a>
                 <a href="add_habits.html">Add Habits</a>
                 <a href="dashboard.html">My Goals & Habits</a>
-                <a href="#clients">Statistics & Analysis</a>
+                <a href="#clients" id="jqueryanime">Statistics & Analysis</a>
                 <a href="dashboard.html">Achievements</a>
                 <a href="#contact">Forums</a>
                 <button class="dropdown-btn" style="cursor: help;">Tips 
@@ -134,7 +136,7 @@ body {
         <br>
         <div class = "desc">Time to celebrate in Joy!<br>you achieved you first<br>milestone.<br>A start couldn't be any better.<br>Great Job.<br>Keep it Up!</div>
 </div>
-
+<div id="anime" style="background:#98bf21;height:1px;width:2px;position:absolute;display: none;">PAGE STILL NEEDS WORK!</div>
 
 <div class="snip">
         <div class="dot"></div>
