Added 1 more animation to add_medals.

--- a/add_medals.html
+++ b/add_medals.html
@@ -112,7 +112,7 @@ body {
                 <a href="dashboard.html">My Goals & Habits</a>
                 <a href="#clients" id="jqueryanime">Statistics & Analysis</a>
                 <a href="dashboard.html">Achievements</a>
-                <a href="#contact">Forums</a>
+                <a href="#contact" id="jqueryanime2">Forums</a>
                 <button class="dropdown-btn" style="cursor: help;">Tips 
                   <i class="fa fa-caret-down"></i>
                 </button>
@@ -136,7 +136,8 @@ body {
         <br>
         <div class = "desc">Time to celebrate in Joy!<br>you achieved you first<br>milestone.<br>A start couldn't be any better.<br>Great Job.<br>Keep it Up!</div>
 </div>
-<div id="anime" style="background:#98bf21;height:1px;width:2px;position:absolute;display: none;">PAGE STILL NEEDS WORK!</div>
+<div id="anime" style="background:blue;height:1px;width:2px;position:absolute;display: none;">STATS PAGE STILL NEEDS WORK!</div>
+<div id="anime2" style="background:#98bf21;height:1px;width:2px;position:absolute;display:none;">FORUMS PAGE IS NOT READY!</div>
 
 <div class="snip">
         <div class="dot"></div>
