made changes to alerts

--- a/add_medals.html
+++ b/add_medals.html
@@ -10,7 +10,19 @@
       <script src="jquery-3.4.1.min.js"></script> <!--Plugin required to implement jquery-->
       <script src="jquery_anime.js"></script>
 <style type="text/css">
+footer {
+  font-family: 'Open Sans', sans-serif;
+  position: absolute;
+  left: 0em;
 
+  bottom: -54em;
+  width: 147%;
+
+  background-color: #2C365E;
+  color: white;
+  border: 0.1em solid #2C365E;
+  border-radius: 1em 1em 0em 0em;
+}
 /* Fixed sidenav, full height */
 .sidenav {
   height: 125%;
@@ -136,8 +148,8 @@ body {
         <br>
         <div class = "desc">Time to celebrate in Joy!<br>you achieved you first<br>milestone.<br>A start couldn't be any better.<br>Great Job.<br>Keep it Up!</div>
 </div>
-<div id="anime" style="background:blue;height:1px;width:2px;position:absolute;display: none;">STATS PAGE STILL NEEDS WORK!</div>
-<div id="anime2" style="background:#98bf21;height:1px;width:2px;position:absolute;display:none;">FORUMS PAGE IS NOT READY!</div>
+<div id="anime" style="background:blue;color:white;height:1px;width:2px;position:absolute;display: none;text-align: center; border:solid">STATS PAGE STILL NEEDS WORK!</div>
+<div id="anime2" style="background:#98bf21;height:1px;width:2px;position:absolute;display:none;text-align: center; border:solid black">FORUMS PAGE IS NOT READY!</div>
 
 <div class="snip">
         <div class="dot"></div>
