Fixed css and fonts in faq

--- a/faq.html
+++ b/faq.html
@@ -3,6 +3,7 @@
     <title>
         GoalKeeper FAQs
     </title>
+    <link href="https://fonts.googleapis.com/css?family=Lato:300i|Open+Sans|Oswald:400,500|Roboto&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,500&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="navbar.css">
       <link rel="stylesheet" href="footer/footer.css">
@@ -71,11 +72,9 @@
         }
         #heading{
             color:black;
-            padding:20px;
-            width:50%;
-            margin-left: 25%;
-            font-size:35px;
-
+            padding-top: 1em;
+            padding-bottom: 1.5em;
+            text-align: center;
         }
         hr{
             
@@ -88,7 +87,8 @@
             
         }
         #head_space{
-            height:60px
+            height:60px;
+            width: 100%;
         }
         #active{
             cursor:default;
@@ -102,7 +102,13 @@
         outline:none;
         border: 0.2em solid white !important;
         }
-
+        span.bigHead {
+        color:black;
+        font-weight:300;
+        font-family: 'Lato', sans-serif;
+        font-style: italic;
+        font-size: 4.1em;
+    }
 
     </style>
 </head>
@@ -126,7 +132,7 @@
         </div>
         <div id="head_space"></div>
     <div id="heading">
-    <center><b>Frequently Asked Questions</b></center>
+    <span class = "bigHead">Frequently Asked Questions</span>
     </div>
 
     <hr>
